--- a/components/footer.html
+++ b/components/footer.html
@@ -19,7 +19,7 @@
         <!-- Copyright and Social Icons -->
         <div class="flex flex-col md:flex-row justify-between items-center pt-8 border-t border-gray-800">
             <div class="text-gray-400 mb-4 md:mb-0 font-light">
-                2025 MOHIT BHOITE. All rights reserved
+                2025 3Dpros iOT. All rights reserved
             </div>
             <div class="flex space-x-6">
                 <a href="#" class="text-gray-400 hover:text-primary-400 transition-colors"><i class="fab fa-twitter"></i></a>
